syntax = "proto3";

import "google/protobuf/empty.proto";

package subpubv1;

option go_package = "vk_pubsub/proto/subpub/gen/go/subpubv1";

service PubSub {
  rpc Subscribe(SubscribeRequest) returns (stream Event);
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
  string key = 1;
}

message PublishRequest {
  string key = 1;
  string data = 2;
}

message Event {
  string data = 1;
}
